Add ingredients as unordered list

--- a/recipes/peanut-butter-cookies.html
+++ b/recipes/peanut-butter-cookies.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Peanut Butter Cookies</h1>
-        <img src="../recipes/img/pbc.jpeg" alt="Peanut Butter Cookies completed"
+        <img src="../recipes/img/pbc.jpeg" alt="Peanut Butter Cookies completed">
+            <h4>Delicious and Golden Peanut Butter Cookies</h4>
+                <h2>Ingredients</h2>
+                    <ul>
+                        <li>1 cup peanut butter</li>
+                        <li>1 cup white sugar</li>
+                        <li>1 egg</li>
+                    </ul>
 </body>
 </html>
