Complete PB cookies and edit index

--- a/recipes/peanut-butter-cookies.html
+++ b/recipes/peanut-butter-cookies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PB Cookies</title>
 </head>
 <body>
     <h1>Peanut Butter Cookies</h1>
@@ -16,5 +16,12 @@
                         <li>1 cup white sugar</li>
                         <li>1 egg</li>
                     </ul>
+                <h2>Steps</h2>
+                    <ol>
+                        <li>Preheat the oven to 350 degrees F </li>
+                        <li>Mix peanut butter, sugar, and egg together in a bowl using an electric mixer until smooth and creamy.</li>
+                        <li>Roll mixture into 1-inch balls and place 1 inch apart on an ungreased baking sheet; flatten each with a fork, making a criss-cross pattern.</li>
+                        <li>Bake in the preheated oven until edges are firm, about 10 minutes. Cool on the baking sheet briefly before removing to a wire rack to cool completely.</li>
+                    </ol>
 </body>
 </html>
