--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a>
+        <ul>
+            <li><a href="recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a></li>
+            <li><a href="recipes/lemon-pie.html">Meyer Lemon Pie</a></li>
+            <li><a href="recipes/blueberry-cobbler.html">Blueberry Cobbler</a></li>
+        </ul>
 </body>
 </html>
