Save web page images and add information to web pages

--- a/recipes/blueberry-cobbler.html
+++ b/recipes/blueberry-cobbler.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>Blueberry Cobbler</h1>
+        <img src="../recipes/img/bbc.jpeg" alt="Blueberry Cobbler with Ice cream on top">
+            <h4>A piece of Blueberry Cobbler - Ala Mode</h4>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>1/2 cup butter</li>
+                <li>1 cup self-rising flour</li>
+                <li>1 cup white sugar</li>
+                <li>1 cup milk</li>
+                <li>4 cups fresh blueberries</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Preheat the oven to 350 degrees F . Place butter in an 8-inch, square baking dish.</li>
+                <li>Melt butter in the preheating oven, about 5 minutes. Remove from oven.</li>
+                <li>Meanwhile, mix flour, sugar, and milk in a bowl until combined; pour batter over melted butter in the baking dish. Scatter blueberries over batter.</li>
+                <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 1 hour.</li>
+            </ol>
 </body>
 </html>
