--- a/recipes/lemon-pie.html
+++ b/recipes/lemon-pie.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Meyer Lemon Pie</h1>
+        <img src="../recipes/img/mlp.jpeg" alt="Lemon Pie with pretty decorations">
 </body>
 </html>
