Add information to lemon pie webpage

--- a/recipes/lemon-pie.html
+++ b/recipes/lemon-pie.html
@@ -9,5 +9,22 @@
 <body>
     <h1>Meyer Lemon Pie</h1>
         <img src="../recipes/img/mlp.jpeg" alt="Lemon Pie with pretty decorations">
+            <h4>Meyer Lemon Pie with whipped cream piped decoratively on top.</h4>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>1 and 1/4 cups white sugar</li>
+                <li>3 large eggs</li>
+                <li>3 and 3/4 fluid ounces Meyer lemon juice</li>
+                <li>1/4 cup butter, melted</li>
+                <li>1 (9 inch) pastry shell, unbaked</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Preheat the oven to 350 degrees F.</li>
+                <li>Place sugar, eggs, and lemon juice in a blender; blend until smooth, about 3 minutes.</li>
+                <li>Pour melted butter into the blender and blend for 30 seconds more.</li>
+                <li>Transfer lemon filling to pastry shell.</li>
+                <li>Bake in the preheated oven until filling is just set, 30 to 35 minutes. Allow pie to rest until completely set before serving, about 15 minutes more.</li> 
+            </ol>
 </body>
 </html>
